# bsh_hmi

./: CMakeLists.txt  main.c
main/assets/gifs/: loader_gif.c
main/assets/pngs/: icon_cup.c  icon_home.c  icon_wifi.c  img_flatwhite.c  img_flatwhite.cZone.Identifier  img_milk.c
main/view/: launch_screen.c  launch_screen.h  menu_screen.c  menu_screen.h  select_screen.c  select_screen.h
nfc/assets/gifs/: loader.json
nfc/view/: menu_screen.c  styles.c  styles.h
